# pythomator

./: README.md  pyproject.toml  pythomator.py  requirements.txt
pythomator/: __init__.py  __main__.py  ansi.py  cli.py  crypto.py  display.py  menu.py  shell.py  vault.py
tooter9/pythomator/: crypto.py  shell.py
