[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythomator"
version = "2.0"
description = "pythomator"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
keywords = ["encryption", "vault", "aes-siv", "aes-gcm", "scrypt", "cli", "cryptomator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "pycryptodome>=3.23.0",
    "click>=8.3",
    "rich>=14.0",
    "tqdm>=4.67.3",
]

[project.scripts]
pythomator = "pythomator.cli:main"

[project.urls]
Homepage = "https://github.com/tooter9/pythomator"
"Bug Tracker" = "https://github.com/tooter9/pythomator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pythomator*"]
exclude = ["build*", "dist*"]
